--- a/wp/wp-content/themes/ubermost-create/views/partials/footer.twig
+++ b/wp/wp-content/themes/ubermost-create/views/partials/footer.twig
@@ -1,22 +1,19 @@
-<footer class="footer-alt">
-  <div class="footer-alt__body">
-    <form action="" method="post" class="footer-alt__body__newsletter">
+<footer class="footer footer--create">
+  <div class="footer__body">
+    {# <form action="" method="post" class="footer__body__newsletter">
       <h3>Newsletter</h3>
       <p>Monthly digest with links to valuable content and ocassional news.</p>
       <fieldset>
         <input type="email" name="email" placeholder="Your email address">
         <button type="submit"><i class="fa fa-envelope"></i></button>
       </fieldset>
-    </form>
-    <p class="footer-alt__body__links">
-      <a href="http://feeds.feedburner.com/ubermost">RSS</a>
-      &middot;
-      <a href="http://facebook.com/ubermost">Facebook</a>
-      &middot;
-      <a href="http://instagram.com/ubermost">Instagram</a>
-      &middot;
-      <a href="mailto:hello@ubermost.com">hello@ubermost.com</a>
-    </p>
-    <small class="footer-alt__body__copy">Part of the <a href="http://ubermost.com">Ubermost</a>. Built by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
+    </form> #}
+    <ul class="footer__body__links">
+      <li><a href="http://feeds.feedburner.com/ubermost">RSS</a></li>
+      <li><a href="http://facebook.com/ubermost">Facebook</a></li>
+      <li><a href="http://instagram.com/ubermost">Instagram</a></li>
+      <li><a href="mailto:hello@ubermost.com">hello@ubermost.com</a></li>
+    </ul>
+    <small class="footer__body__copy">Part of the <a href="http://ubermost.com">Ubermost</a>. Built by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
   </div>
 </footer>
