--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,35 +1,166 @@
 .footer {
-  @extend %block;
-  margin-top: rem($tick--vertical * 2);
+  padding: rem($tick--vertical * 2) 0;
+  background: $color--border;
+
+  &--create {
+    margin-top: rem($tick--vertical * 3);
+  }
 
   * {
     font-size: rem($size--minor);
     color: $color--faint;
   }
 
-  a {
-    text-decoration: underline;
-    padding: rem(10px);
-    margin: rem(-10px);
+  ul {
+    padding: 0;
+  }
+
+  li {
+    list-style: none;
     display: inline-block;
+  }
+
+  li + li {
+    &::before {
+      content: '· ';
+    }
+  }
+
+  a {
+    @extend %underlined-anchor;
+    border-color: $color--background;
+
+    &:hover {
+      color: $color--base;
+      border-color: $color--base;
+    }
   }
 
   &__body {
     @extend %container;
     @extend %container--generator;
-    display: flex;
+    @include clearfix();
 
-    &__about,
+    &__newsletter,
+    &__links,
     &__copy {
       margin: 0;
     }
 
-    &__about {
+    &__newsletter {
+      position: relative;
+      padding-bottom: rem($tick--vertical / 2);
+      margin-bottom: rem($tick--vertical / 2);
 
+      &::after {
+        content: '';
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 1px;
+        background: $color--background;
+      }
+
+      * {
+        color: $color--minor;
+      }
+
+      h3 {
+        @extend %heading;
+        color: $color--base;
+        margin: 0;
+        font-weight: 600;
+      }
+
+      p {
+        margin: 0;
+      }
+
+      fieldset {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 0;
+        padding: rem($tick--vertical / 4) 0;
+        border: 0;
+        display: inline-block;
+      }
+
+      input {
+        box-sizing: border-box;
+        border-radius: 0;
+        border: 0;
+        padding: ($tick--vertical / 2);
+        height: rem($tick--vertical * 1.5);
+        width: rem($tick--horizontal * 8);
+        color: $color--base;
+      }
+
+      button {
+        padding: 0;
+        margin: 0;
+        border: 0;
+        background: transparent;
+        position: absolute;
+        top: rem($tick--vertical / 4);
+        right: 0;
+        padding: 0 ($tick--vertical / 2);
+        height: rem($tick--vertical * 1.5);
+        cursor: pointer;
+
+        i {
+          transition: trans(color);
+        }
+
+        &:hover i {
+          color: $color--base;
+        }
+      }
+    }
+
+    &__links {
+      float: left;
     }
 
     &__copy {
-      margin-left: auto;
+      float: right;
+    }
+  }
+
+  @include breakpoint(tablet) {
+    &__body {
+      &__newsletter {
+        fieldset {
+          position: relative;
+        }
+      }
+    }
+  }
+
+  @include breakpoint(phablet) {
+    &__body {
+      &__links {
+        display: none;
+      }
+
+      &__copy {
+        float: none;
+      }
+    }
+  }
+
+  @include breakpoint(phone) {
+    padding-top: rem($tick--vertical);
+    padding-bottom: rem($tick--vertical);
+
+    &__body {
+      &__newsletter {
+        fieldset, input {
+          display: block;
+          width: 100%;
+        }
+      }
     }
   }
 }
