--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -22,7 +22,7 @@
         </svg>
       </a>
     </h1>
-    <p class="top__about">{Description} Collected by <a href="http://lamberski.com">Maciek Lamberski</a>. Also posting on <a href="http://facebook.com/ubermost">Facebook</a> and <a href="http://instagram.com/ubermost">Instagram</a>.</p>
+    <p class="top__about">{Description} Also posting on <a href="http://facebook.com/ubermost">Facebook</a> and <a href="http://instagram.com/ubermost">Instagram</a>.</p>
   </header>
 
   <hr>
@@ -62,6 +62,19 @@
       {block:NextPage}<a rel="next" href="{NextPage}">&rarr;</a>{/block:NextPage}
     </nav>
   {/block:Pagination}
+
+  <footer class="footer">
+    <div class="footer__body">
+      <ul class="footer__body__links">
+        <li><a href="http://feeds.feedburner.com/ubermost">RSS</a></li>
+        <li><a href="http://facebook.com/ubermost">Facebook</a></li>
+        <li><a href="http://instagram.com/ubermost">Instagram</a></li>
+        <li><a href="mailto:hello@ubermost.com">hello@ubermost.com</a></li>
+      </ul>
+      <small class="footer__body__copy">Collected by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
+    </div>
+  </footer>
+
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
