Center the footer on blog

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -139,6 +139,12 @@
   }
 
   @include breakpoint(phablet) {
+    text-align: center;
+
+    &--create {
+      text-align: left;
+    }
+
     &__body {
       &__links {
         display: none;
