Add external links support to generator

--- a/wp/wp-content/themes/ubermost-create/views/partials/footer.twig
+++ b/wp/wp-content/themes/ubermost-create/views/partials/footer.twig
@@ -9,11 +9,11 @@
       </fieldset>
     </form> #}
     <ul class="footer__body__links">
-      <li><a href="http://feeds.feedburner.com/ubermost">RSS</a></li>
-      <li><a href="http://facebook.com/ubermost">Facebook</a></li>
-      <li><a href="http://instagram.com/ubermost">Instagram</a></li>
+      <li><a href="http://feeds.feedburner.com/ubermost" rel="external">RSS</a></li>
+      <li><a href="http://facebook.com/ubermost" rel="external">Facebook</a></li>
+      <li><a href="http://instagram.com/ubermost" rel="external">Instagram</a></li>
       <li><a href="mailto:hello@ubermost.com">hello@ubermost.com</a></li>
     </ul>
-    <small class="footer__body__copy">Part of the <a href="http://ubermost.com">Ubermost</a>. Built by <a href="http://lamberski.com">Maciej Lamberski</a>.</small>
+    <small class="footer__body__copy">Part of the <a href="http://ubermost.com">Ubermost</a>. Built by <a href="http://lamberski.com" rel="external">Maciej Lamberski</a>.</small>
   </div>
 </footer>
