--- a/wp/wp-content/themes/ubermost-create/views/partials/header.twig
+++ b/wp/wp-content/themes/ubermost-create/views/partials/header.twig
@@ -9,13 +9,13 @@
           <a href="http://ubermost.com">Blog</a>
       </li>
       <li>
-        <a href="http://facebook.com/ubermost">
+        <a href="http://facebook.com/ubermost" rel="external">
           <i class="fa fa-facebook"></i>
           <span>Facebook</span>
         </a>
       </li>
       <li>
-        <a href="http://instagram.com/ubermost">
+        <a href="http://instagram.com/ubermost" rel="external">
           <i class="fa fa-instagram"></i>
           <span>Instagram</span>
         </a>
