Add external links support

--- a/wp/wp-content/themes/ubermost-create/views/partials/templates.twig
+++ b/wp/wp-content/themes/ubermost-create/views/partials/templates.twig
@@ -7,7 +7,7 @@
           <a href="#" class="button button--change">Change&hellip;</a>
         </p>
         <p class="preview__details__body__or">
-          <span>or</span> <a href="{{blog_link}}">see it on blog</a>
+          <span>or</span> <a href="{{blog_link}}" target="_new">see it on blog</a>
         </p>
       </div>
     </div>
