Add few updates to the OpenGraph and Twitter details of the post

--- a/wp/wp-content/themes/ubermost-create/views/pages/single.twig
+++ b/wp/wp-content/themes/ubermost-create/views/pages/single.twig
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <title>Ubermost</title>
     <meta property="og:site_name" content="Ubermost">
-    <meta property="og:title" content="">
+    <meta property="og:title" content="{{ post.title }}">
     <meta property="og:image" content="{{ image }}">
     <meta property="og:description" content="{{ post.content | striptags }}">
     <meta property="og:url" content="{{ post.link | replace({ 'create': 'blog' }) }}">
     <meta property="og:type" content="article">
-    <meta name="twitter:card" content="photo">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@ubermost">
-    <meta name="twitter:title" content="">
+    <meta name="twitter:creator" content="@lamberski">
+    <meta name="twitter:title" content="{{ post.title }}">
     <meta name="twitter:description" content="{{ post.content | striptags }}">
     <meta name="twitter:image" content="{{ image }}">
     <meta name="twitter:url" content="{{ post.link | replace({ 'create': 'blog' }) }}">
