--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -13,6 +13,34 @@
   <link href="//assets.ubermost.com/styles/main.min.css" rel="stylesheet">
 </head>
 <body>
+  <div id="fb-root"></div>
+  <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=1718768475039423";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
+  <script>
+    window.twttr = (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0],
+        t = window.twttr || {};
+      if (d.getElementById(id)) return t;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "https://platform.twitter.com/widgets.js";
+      fjs.parentNode.insertBefore(js, fjs);
+
+      t._e = [];
+      t.ready = function(f) {
+        t._e.push(f);
+      };
+
+      return t;
+    }(document, "script", "twitter-wjs"));
+  </script>
   <header class="top">
     <h1 class="top__logo">
       <a href="{BlogURL}">
@@ -39,16 +67,29 @@
           </div>
         {/block:Caption}
         <ul class="post__links">
-          <li>
+          <li class="post__links__link">
             <a href="{Permalink}"><i class="fa fa-link"></i></a>
           </li>
-          <li>
+          <li class="post__links__link">
             {ReblogButton size=30}
             <i class="fa fa-retweet"></i>
           </li>
-          <li>
+          <li class="post__links__link">
             {LikeButton size=30}
             <i class="fa fa-heart"></i>
+          </li>
+          <li class="post__links__link post__links__link--socials">
+            <span class="fb-share-button"
+              data-href="{Permalink}"
+              data-layout="button_count"
+              data-size="small"
+              data-mobile-iframe="true">
+              <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
+            </span>
+            <a class="twitter-share-button"
+              href="https://twitter.com/intent/tweet?text={Permalink}"
+              data-size="small">
+            </a>
           </li>
         </ul>
       {/block:Photo}
