--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -79,17 +79,17 @@
             <i class="fa fa-heart"></i>
           </li>
           <li class="post__links__link post__links__link--socials">
+            <a class="twitter-share-button"
+              href="https://twitter.com/intent/tweet?text={Permalink}"
+              data-size="small">
+            </a>
             <span class="fb-share-button"
               data-href="{Permalink}"
               data-layout="button_count"
               data-size="small"
               data-mobile-iframe="true">
-              <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
+              <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse"></a>
             </span>
-            <a class="twitter-share-button"
-              href="https://twitter.com/intent/tweet?text={Permalink}"
-              data-size="small">
-            </a>
           </li>
         </ul>
       {/block:Photo}
