Allow previewing the post

--- a/wp/wp-content/themes/ubermost-create/views/pages/single.twig
+++ b/wp/wp-content/themes/ubermost-create/views/pages/single.twig
@@ -18,6 +18,6 @@
     <meta name="twitter:url" content="{{ post.link | replace({ 'create': 'blog' }) }}">
   </head>
   <body>
-    <!-- Nothing here. Go away. -->
+    <img src="{{ image }}" alt="">
   </body>
 </html>
