--- a/wp/wp-content/themes/ubermost-create/style.css
+++ b/wp/wp-content/themes/ubermost-create/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Ubermost Create
+Theme Name: Ubermost
 Theme URI: http://ubermost.com
 Author: Maciej Lamberski
 Author URI: http://lamberski.com
