Update spacing between elements in footer

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -17,12 +17,13 @@
 
     li {
         list-style: none;
-        display: inline-block;
+        float: left;
     }
 
     li + li {
         &::before {
-            content: '· ';
+            content: '·';
+            margin: 0 0.125em;
         }
     }
 
