Make images placeholder

--- a/src/templates/tumblr.html
+++ b/src/templates/tumblr.html
@@ -60,7 +60,9 @@
         <article class="post" data-tags="{block:Tags}{Tag} {/block:Tags}">
             {block:Photo}
                 <a href="{Permalink}" class="post__image">
-                    <img src="{PhotoURL-HighRes}" alt="{PhotoAlt}">
+                    <span>
+                        <img src="{PhotoURL-HighRes}" alt="{PhotoAlt}">
+                    </span>
                 </a>
 
                 {block:Caption}
