--- a/src/styles/blocks/_post.scss
+++ b/src/styles/blocks/_post.scss
@@ -30,6 +30,19 @@
         @extend %container;
         @extend %text;
 
+        span {
+            position: relative;
+            display: block;
+            background: $color--border;
+            padding-top: 100%;
+        }
+
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
         &::after {
             display: none;
         }
