--- a/wp/wp-content/themes/ubermost/views/partials/overlays.twig
+++ b/wp/wp-content/themes/ubermost/views/partials/overlays.twig
@@ -1,39 +1,38 @@
 <section id="sizes-overlay" class="overlay">
-  <a href="#" class="overlay__close"></a>
-  <div class="overlay__body overlay__body--scale sizes">
-    {% for group in size_groups %}
-      <section class="sizes__group">
-        <h3 class="sizes__group__heading">
-          <i class="fa fa-{{ group.get_field('icon') }}"></i>
-          {{ group.name }}
-        </h3>
+    <a href="#" class="overlay__close"></a>
+    <div class="overlay__body overlay__body--scale sizes">
+        {% for group in size_groups %}
+            <section class="sizes__group">
+                <h3 class="sizes__group__heading">
+                    <i class="fa fa-{{ group.get_field('icon') }}"></i>
+                    {{ group.name }}
+                </h3>
 
-        {% for size in sizes[group.name] %}
-          {% set size = TimberPost(size.ID) %}
-          {% set width = size.get_field('width') %}
-          {% set height = size.get_field('height') %}
-          {% set ratio = (width / height) | round(1) %}
-          {% set name = size.get_field('device_name') %}
+                {% for size in sizes[group.name] %}
+                    {% set size = TimberPost(size.ID) %}
+                    {% set width = size.get_field('width') %}
+                    {% set height = size.get_field('height') %}
+                    {% set ratio = (width / height) | round(1) %}
+                    {% set name = size.get_field('device_name') %}
 
-          <label data-width="{{ width }}" data-height="{{ height }}" data-ratio="{{ ratio }}">
-            <input type="radio" name="size" value="{{ size.ID }}">
-            <span>
-              {{ size.post_title }}
-              {% if name %}
-                <em>{{ name }}</em>
-              {% endif %}
-            </span>
-          </label>
+                    <label data-width="{{ width }}" data-height="{{ height }}" data-ratio="{{ ratio }}">
+                        <input type="radio" name="size" value="{{ size.ID }}">
+                        <span>
+                            {{ size.post_title }}
+                            {% if name %}
+                                <em>{{ name }}</em>
+                            {% endif %}
+                        </span>
+                    </label>
+                {% endfor %}
+            </section>
         {% endfor %}
-      </section>
-    {% endfor %}
-  </div>
+    </div>
 </section>
 
-<section id="posts-overlay" class="overlay loading">
-  <a href="#" class="overlay__close"></a>
-  <div class="overlay__body">
-    <ul class="loading__body posts" data-endpoint="{{ api_endpoint }}" data-action="get_posts"></ul>
-  </div>
-  <span class="loading__indicator"></span>
+<section id="posts-overlay" class="overlay">
+    <a href="#" class="overlay__close"></a>
+    <div class="overlay__body">
+        <ul class="posts" data-endpoint="{{ api_endpoint }}" data-action="get_posts"></ul>
+    </div>
 </section>
