--- a/src/styles/blocks/_posts.scss
+++ b/src/styles/blocks/_posts.scss
@@ -16,6 +16,7 @@
         position: relative;
         opacity: 1;
         padding-top: 100%;
+        background: $color--background;
 
         &::after {
             content: '';
