--- a/src/styles/blocks/_posts.scss
+++ b/src/styles/blocks/_posts.scss
@@ -30,7 +30,7 @@
             background: rgba(#000, 0.5);
         }
 
-        .loading--done &:hover::after {
+        &[data-loaded]:hover::after {
             opacity: 1;
         }
     }
