--- a/wp/wp-content/themes/ubermost/views/layouts/main.twig
+++ b/wp/wp-content/themes/ubermost/views/layouts/main.twig
@@ -7,12 +7,12 @@
         <link href="http://feeds.feedburner.com/ubermost" rel="alternate" type="application/rss+xml">
         <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro|Source+Serif+Pro:400,600" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-        {% if false %}
-            <link href="//assets.ubermost.com/styles/main.min.css" rel="stylesheet">
-            <link href="//assets.ubermost.com/images/favicon.png" rel="shortcut icon">
-        {% else %}
+        {% if constant('ENV') == 'local' %}
             <link href="http://ubermost.dev/dist/styles/main.min.css" rel="stylesheet">
             <link href="http://ubermost.dev/dist/images/favicon.png" rel="shortcut icon">
+        {% else %}
+            <link href="//assets.ubermost.com/styles/main.min.css" rel="stylesheet">
+            <link href="//assets.ubermost.com/images/favicon.png" rel="shortcut icon">
         {% endif %}
     </head>
     <body>
@@ -26,10 +26,10 @@
         {% include 'partials/overlays.twig' %}
         {% include 'partials/templates.twig' %}
 
-        {% if false %}
-            <script src="//assets.ubermost.com/scripts/create.min.js"></script>
-        {% else %}
+        {% if constant('ENV') == 'local' %}
             <script src="http://ubermost.dev/dist/scripts/create.min.js"></script>
+        {% else %}
+            <script src="//assets.ubermost.com/scripts/create.min.js"></script>
         {% endif %}
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
