Update units in styles

--- a/public/styles/text.css
+++ b/public/styles/text.css
@@ -17,8 +17,8 @@
     }
 
     li {
-        padding-left: 7px;
-        margin-left: -7px;
+        padding-left: 7rem;
+        margin-left: -7rem;
     }
 
     ul li {
