--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -18,7 +18,7 @@ html {
         content: '';
         position: absolute;
         inset: 0;
-        height: 3px;
+        height: 3rem;
         background: var(--color--accent);
     }
 }
