--- a/public/styles/post.css
+++ b/public/styles/post.css
@@ -12,7 +12,7 @@
         top: 0;
         right: 0;
         left: 0;
-        height: 1px;
+        height: 1rem;
         background-color: var(--color--border);
     }
 
